# SpaceshipOperator

./: .gitignore  CMakeLists.txt
src/: ComparisonOperatorsBeforeCpp20.cpp  CompatibilityIssues.cpp  LexicographicalCompareThreeWay.cpp  MultipleOrderingCriteria.cpp  SpaceshipImplementation.cpp
